// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accessibility /> should render click on fontSize 1`] = `
<WrapperComponent
  config={
    Object {
      "redux": true,
      "theme": true,
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Component
      theme={
        Object {
          "breakpoints": Object {
            "lg": "@media only screen and (min-width: 75em)",
            "md": "@media only screen and (min-width: 64em)",
            "sm": "@media only screen and (min-width: 48em)",
            "xs": "@media only screen and (min-width: 0em)",
          },
          "colors": Object {
            "bg": Object {
              "playerHeader": "rgba(236, 240, 241, 0.9)",
              "primary": "#FF0177",
              "quaternary": "#919191",
              "quinary": "#4E8ECA",
              "secondary": "#0D3B66",
              "tertiary": "#FFF",
            },
            "borders": Object {
              "active": "#FF0177",
              "primary": "#FF0177",
              "secondary": "#4E8ECA",
            },
            "font": Object {
              "active": "#FF0177",
              "danger": "#FF2624",
              "primary": "#FF0177",
              "quaternary": "#FFF",
              "quinary": "#333",
              "secondary": "#0D3B66",
              "tertiary": "#919191",
            },
          },
          "font": Object {
            "size": Object {
              "caption": "0.75rem",
              "h1": "3.75rem",
              "h2": "3rem",
              "h3": "2.5rem",
              "h4": "2.25rem",
              "h5": "1.625rem",
              "h6": "1.5rem",
              "help": "0.625em",
              "lg": "18px",
              "md": "16px",
              "paragraph1": "1.125rem",
              "paragraph2": "1rem",
              "paragraph3": "0.875rem",
              "sm": "14px",
              "small": "0.5rem",
              "subtitle1": "1.1375rem",
              "subtitle2": "1.25rem",
              "subtitle3": "1.375rem",
            },
          },
          "name": "LIGHT",
          "utils": Object {
            "spacing": [Function],
          },
        }
      }
    >
      <Accessibility>
        <Accessibilitystyled__StyledContainer>
          <span
            className="Accessibilitystyled__StyledContainer-gi4yzg-0 dWjzqH"
          >
            <Accessibilitystyled__StyledItem
              className="accessibility__font-size"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__font-size"
                onClick={[Function]}
              >
                Font size:lg
              </div>
            </Accessibilitystyled__StyledItem>
            <Accessibilitystyled__StyledItem
              className="accessibility__theme"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__theme"
                onClick={[Function]}
              >
                Tema:LIGHT
              </div>
            </Accessibilitystyled__StyledItem>
            <Accessibilitystyled__StyledItem
              className="accessibility__language"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__language"
                onClick={[Function]}
              >
                Idioma:es
              </div>
            </Accessibilitystyled__StyledItem>
          </span>
        </Accessibilitystyled__StyledContainer>
      </Accessibility>
    </Component>
  </Provider>
</WrapperComponent>
`;

exports[`<Accessibility /> should render click on language 1`] = `
<WrapperComponent
  config={
    Object {
      "redux": true,
      "theme": true,
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Component
      theme={
        Object {
          "breakpoints": Object {
            "lg": "@media only screen and (min-width: 75em)",
            "md": "@media only screen and (min-width: 64em)",
            "sm": "@media only screen and (min-width: 48em)",
            "xs": "@media only screen and (min-width: 0em)",
          },
          "colors": Object {
            "bg": Object {
              "playerHeader": "rgba(236, 240, 241, 0.9)",
              "primary": "#FF0177",
              "quaternary": "#919191",
              "quinary": "#4E8ECA",
              "secondary": "#0D3B66",
              "tertiary": "#FFF",
            },
            "borders": Object {
              "active": "#FF0177",
              "primary": "#FF0177",
              "secondary": "#4E8ECA",
            },
            "font": Object {
              "active": "#FF0177",
              "danger": "#FF2624",
              "primary": "#FF0177",
              "quaternary": "#FFF",
              "quinary": "#333",
              "secondary": "#0D3B66",
              "tertiary": "#919191",
            },
          },
          "font": Object {
            "size": Object {
              "caption": "0.75rem",
              "h1": "3.75rem",
              "h2": "3rem",
              "h3": "2.5rem",
              "h4": "2.25rem",
              "h5": "1.625rem",
              "h6": "1.5rem",
              "help": "0.625em",
              "lg": "18px",
              "md": "16px",
              "paragraph1": "1.125rem",
              "paragraph2": "1rem",
              "paragraph3": "0.875rem",
              "sm": "14px",
              "small": "0.5rem",
              "subtitle1": "1.1375rem",
              "subtitle2": "1.25rem",
              "subtitle3": "1.375rem",
            },
          },
          "name": "LIGHT",
          "utils": Object {
            "spacing": [Function],
          },
        }
      }
    >
      <Accessibility>
        <Accessibilitystyled__StyledContainer>
          <span
            className="Accessibilitystyled__StyledContainer-gi4yzg-0 dWjzqH"
          >
            <Accessibilitystyled__StyledItem
              className="accessibility__font-size"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__font-size"
                onClick={[Function]}
              >
                Font size:md
              </div>
            </Accessibilitystyled__StyledItem>
            <Accessibilitystyled__StyledItem
              className="accessibility__theme"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__theme"
                onClick={[Function]}
              >
                Tema:LIGHT
              </div>
            </Accessibilitystyled__StyledItem>
            <Accessibilitystyled__StyledItem
              className="accessibility__language"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__language"
                onClick={[Function]}
              >
                Idioma:en
              </div>
            </Accessibilitystyled__StyledItem>
          </span>
        </Accessibilitystyled__StyledContainer>
      </Accessibility>
    </Component>
  </Provider>
</WrapperComponent>
`;

exports[`<Accessibility /> should render click on theme 1`] = `
<WrapperComponent
  config={
    Object {
      "redux": true,
      "theme": true,
    }
  }
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <Component
      theme={
        Object {
          "breakpoints": Object {
            "lg": "@media only screen and (min-width: 75em)",
            "md": "@media only screen and (min-width: 64em)",
            "sm": "@media only screen and (min-width: 48em)",
            "xs": "@media only screen and (min-width: 0em)",
          },
          "colors": Object {
            "bg": Object {
              "playerHeader": "rgba(236, 240, 241, 0.9)",
              "primary": "#FF0177",
              "quaternary": "#919191",
              "quinary": "#4E8ECA",
              "secondary": "#0D3B66",
              "tertiary": "#FFF",
            },
            "borders": Object {
              "active": "#FF0177",
              "primary": "#FF0177",
              "secondary": "#4E8ECA",
            },
            "font": Object {
              "active": "#FF0177",
              "danger": "#FF2624",
              "primary": "#FF0177",
              "quaternary": "#FFF",
              "quinary": "#333",
              "secondary": "#0D3B66",
              "tertiary": "#919191",
            },
          },
          "font": Object {
            "size": Object {
              "caption": "0.75rem",
              "h1": "3.75rem",
              "h2": "3rem",
              "h3": "2.5rem",
              "h4": "2.25rem",
              "h5": "1.625rem",
              "h6": "1.5rem",
              "help": "0.625em",
              "lg": "18px",
              "md": "16px",
              "paragraph1": "1.125rem",
              "paragraph2": "1rem",
              "paragraph3": "0.875rem",
              "sm": "14px",
              "small": "0.5rem",
              "subtitle1": "1.1375rem",
              "subtitle2": "1.25rem",
              "subtitle3": "1.375rem",
            },
          },
          "name": "LIGHT",
          "utils": Object {
            "spacing": [Function],
          },
        }
      }
    >
      <Accessibility>
        <Accessibilitystyled__StyledContainer>
          <span
            className="Accessibilitystyled__StyledContainer-gi4yzg-0 dWjzqH"
          >
            <Accessibilitystyled__StyledItem
              className="accessibility__font-size"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__font-size"
                onClick={[Function]}
              >
                Font size:md
              </div>
            </Accessibilitystyled__StyledItem>
            <Accessibilitystyled__StyledItem
              className="accessibility__theme"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__theme"
                onClick={[Function]}
              >
                Tema:DARK
              </div>
            </Accessibilitystyled__StyledItem>
            <Accessibilitystyled__StyledItem
              className="accessibility__language"
              onClick={[Function]}
            >
              <div
                className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__language"
                onClick={[Function]}
              >
                Idioma:es
              </div>
            </Accessibilitystyled__StyledItem>
          </span>
        </Accessibilitystyled__StyledContainer>
      </Accessibility>
    </Component>
  </Provider>
</WrapperComponent>
`;

exports[`<Accessibility /> should render snapshot 1`] = `
<span
  className="Accessibilitystyled__StyledContainer-gi4yzg-0 dWjzqH"
>
  <div
    className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__font-size"
    onClick={[Function]}
  >
    Font size:md
  </div>
  <div
    className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__theme"
    onClick={[Function]}
  >
    Tema:LIGHT
  </div>
  <div
    className="Accessibilitystyled__StyledItem-gi4yzg-1 aetAM accessibility__language"
    onClick={[Function]}
  >
    Idioma:es
  </div>
</span>
`;
